--- a/portfolio.html
+++ b/portfolio.html
@@ -46,64 +46,82 @@
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-techno.jpg" alt="Екран ноута" width="370">
-                        <h2 class="projects-titles link">Технокряк</h2>
-                        <p class="projects-text">Веб-сайт</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles link">Технокряк</h2>
+                            <p class="projects-text">Веб-сайт</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-basket.jpg" alt="Постер баскетбол" width="370">
-                        <h2 class="projects-titles ">Постер New Orlean vs Golden Star</h2>
-                        <p class="projects-text">Дизайн</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles ">Постер New Orlean vs Golden Star</h2>
+                            <p class="projects-text">Дизайн</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-seafood.jpg" alt="Ресторан" width="370">
-                        <h2 class="projects-titles ">Ресторан Seafood</h2>
-                        <p class="projects-text">Додаток</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles ">Ресторан Seafood</h2>
+                            <p class="projects-text">Додаток</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-prime.jpg" alt="Наушники" width="370">
-                        <h2 class="projects-titles ">Проєкт Prime</h2>
-                        <p class="projects-text">Маркетинг</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles ">Проєкт Prime</h2>
+                            <p class="projects-text">Маркетинг</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a  class="link" href="#">
                         <img src="./images/port-boxes.jpg" alt="Коробки" width="370">
-                        <h2 class="projects-titles link">Проєкт Boxes</h2>
-                        <p class="projects-text">Додаток</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles link">Проєкт Boxes</h2>
+                            <p class="projects-text">Додаток</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-monitor.jpg" alt="Монітор" width="370">
-                        <h2 class="projects-titles ">Inspiration has no Borders</h2>
-                        <p class="projects-text">Веб-сайт</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles ">Inspiration has no Borders</h2>
+                            <p class="projects-text">Веб-сайт</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-book.jpg" alt="Книжка" width="370">
-                        <h2 class="projects-titles link">Видання Limited Edition</h2>
-                        <p class="projects-text">Дизайн</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles link">Видання Limited Edition</h2>
+                            <p class="projects-text">Дизайн</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-lab.jpg" alt="проект лаб" width="370">
-                        <h2 class="projects-titles ">Проєкт LAB</h2>
-                        <p class="projects-text">Маркетинг</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles ">Проєкт LAB</h2>
+                            <p class="projects-text">Маркетинг</p>
+                        </div>
                     </a>
                 </li>
                 <li class="card-gallery">
                     <a class="link" href="#">
                         <img src="./images/port-laptop.jpg" alt="Ноутбук" width="370">
-                        <h2 class="projects-titles">Growing Business</h2>
-                        <p class="projects-text">Додаток</p>
+                        <div class="title-gallery">
+                            <h2 class="projects-titles">Growing Business</h2>
+                            <p class="projects-text">Додаток</p>
+                        </div>
                     </a>
                 </li>
             </ul>
