--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,12 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <div class="header-container">
+        <div class="container header-container">
                 <nav class="header-nav">
                     <a class="header-logo link" href="./index.html">Web<span class="header-logo-second">Studio</span></a>
                 <ul class="header-menu list">
-                    <li><a class="header-link link" href="./index.html">Студія</a></li>
-                    <li><a class="header-link current link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="header-link current link" href="./index.html">Студія</a></li>
+                    <li><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="header-link link" href="#">Контакти</a></li>
                 </ul> 
                 </nav>
@@ -27,14 +26,12 @@
                     <li><a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="address-link link" href="tel:+380961111111">+380961111111</a></li>
                 </ul>
-            </div>
         </div>
     </header>
     <main>
-        <section>
+        <section class="section-filter">
             <div class="container">
                 <h1 class="visual-hidden">Усі сервіси</h1>
-            <div class="container-filter">
                 <ul class="filter list">
                     <li><button class="button-filter" type="button">Усі</button></li>
                     <li><button class="button-filter" type="button">Веб-сайти</button></li>
@@ -131,14 +128,13 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="container-footer">
-                <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-second">Studio</span></a>
+            <a class="footer-logo link" href="./index.html">Web<span class="footer-logo-second">Studio</span></a>
         <address>
             <ul class="list">
-                <li><a class="address-place link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Украінки, 26</a>  
+                <li class="address-list"><a class="address-place link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Украінки, 26</a>  
                 </li>
-                <li> <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="address-link  link" href="tel:+380961111111">+380961111111</a></li>
+                <li class="address-list"> <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-list"><a class="address-link  link" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </address>
             </div>
