--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
                 <nav class="header-nav">
                     <a class="header-logo link" href="./index.html">Web<span class="header-logo-second">Studio</span></a>
                 <ul class="header-menu list">
-                    <li><a class="header-link current link" href="./index.html">Студія</a></li>
-                    <li><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="header-link  link" href="./index.html">Студія</a></li>
+                    <li><a class="header-link current link" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="header-link link" href="#">Контакти</a></li>
                 </ul> 
                 </nav>
